--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -322,9 +322,6 @@
     <ClInclude Include="..\public\ImpactShort.h">
       <Filter>05.Effect\PlayerEffect\ImpactShort</Filter>
     </ClInclude>
-    <ClInclude Include="..\Public\SlashWave.h">
-      <Filter>05.Effect\FlogasDungeon</Filter>
-    </ClInclude>
     <ClInclude Include="..\Public\EffectMeteoFire.h">
       <Filter>05.Effect\FlogasDungeon\FIREFIST\TakeDown</Filter>
     </ClInclude>
@@ -351,6 +348,15 @@
     </ClInclude>
     <ClInclude Include="..\Public\EffectSmoke.h">
       <Filter>05.Effect\Dust</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\SlashWave.h">
+      <Filter>05.Effect\FlogasDungeon\FireSlash</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\Fire_Boob.h">
+      <Filter>05.Effect\FlogasDungeon\FireExplosion</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\Fire_explosion.h">
+      <Filter>05.Effect\FlogasDungeon\FireExplosion</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -660,9 +666,6 @@
     <ClCompile Include="..\private\ImpactShort.cpp">
       <Filter>05.Effect\PlayerEffect\ImpactShort</Filter>
     </ClCompile>
-    <ClCompile Include="..\Private\SlashWave.cpp">
-      <Filter>05.Effect\FlogasDungeon</Filter>
-    </ClCompile>
     <ClCompile Include="..\Private\EffectMeteoFire.cpp">
       <Filter>05.Effect\FlogasDungeon\FIREFIST\TakeDown</Filter>
     </ClCompile>
@@ -689,6 +692,15 @@
     </ClCompile>
     <ClCompile Include="..\Private\EffectSmoke.cpp">
       <Filter>05.Effect\Dust</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\SlashWave.cpp">
+      <Filter>05.Effect\FlogasDungeon\FireSlash</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\Fire_Boob.cpp">
+      <Filter>05.Effect\FlogasDungeon\FireExplosion</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\Fire_explosion.cpp">
+      <Filter>05.Effect\FlogasDungeon\FireExplosion</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1056,6 +1068,12 @@
     </Filter>
     <Filter Include="04.UI\SkillIcon\SkillInfo">
       <UniqueIdentifier>{60fb8895-ed32-4c1a-b06f-26310100b3a7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\FlogasDungeon\FireSlash">
+      <UniqueIdentifier>{a6bbf25d-4a31-414c-ae55-e7c9519b0d64}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\FlogasDungeon\FireExplosion">
+      <UniqueIdentifier>{2f2b2acf-e036-4abb-821b-33d2424bada9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
