--- a/Assets/Scenes/Dungeon1_SY.yaml
+++ b/Assets/Scenes/Dungeon1_SY.yaml
@@ -30,7 +30,7 @@ GameObjects:
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [0.419081867, -3.13097477, 3.53722405]
+      Translation: [0.419081867, -0.5, 3.53722405]
       Rotation: [0, 1.99999964, 0]
       Scale: [1.63300002, 1.26800013, 0.837000072]
     Com_Model:
@@ -126,8 +126,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [0, 0, -0.0229713507]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.999141216, 1.00065696, 0.998089373]
+      Rotation: [-0.755309105, -0.795636833, -2.25971732e-07]
+      Scale: [0.999627769, 1.00059736, 0.999827325]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -163,8 +163,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [0, 0, 0]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.999853134, 0.998856366, 1.00022817]
+      Rotation: [-0.755309165, -0.795636892, -2.25971732e-07]
+      Scale: [1.00033402, 0.998709083, 1.00197744]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -190,3 +190,77 @@ GameObjects:
       SpriteNumY: 5
       SpriteTotal: 25
       SpriteSpeed: 30
+  - Name: E_EAFire
+    UUID: 13002950037316236514
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 2
+    BillBord: true
+    Com_Transform:
+      Translation: [0.0787363127, 0.992836535, 0.15544042]
+      Rotation: [-0.755309165, -0.795636952, -2.2597176e-07]
+      Scale: [0.999140799, 1.00194907, 0.999456108]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Explosion01-light_5x5.tga
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 3
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 3
+      SpriteNumX: 5
+      SpriteNumY: 5
+      SpriteTotal: 25
+      SpriteSpeed: 25
+  - Name: E_EAFireBall
+    UUID: 16276616038522574343
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 2
+    BillBord: true
+    Com_Transform:
+      Translation: [2.22962761, 1.25387263, -0.582078636]
+      Rotation: [-0.755309165, -0.795636833, -2.25971732e-07]
+      Scale: [0.999597251, 0.998794973, 1.00187087]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Smoke2.dds
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 5
+      SpriteNumY: 5
+      SpriteTotal: 25
+      SpriteSpeed: 25
