--- a/Assets/Scenes/Dungeon1_SY.yaml
+++ b/Assets/Scenes/Dungeon1_SY.yaml
@@ -30,7 +30,7 @@ GameObjects:
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [0.419081867, -0.5, 3.53722405]
+      Translation: [0.419081867, -1.68057692, 3.53722405]
       Rotation: [0, 1.99999964, 0]
       Scale: [1.63300002, 1.26800013, 0.837000072]
     Com_Model:
@@ -40,8 +40,87 @@ GameObjects:
       Equipment: false
     RenderGroup: 1
     FrustumRange: 50
+  - Name: E_Meteo
+    UUID: 6927469619309004508
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 1
+    BillBord: false
+    Com_Transform:
+      Translation: [-1.04041052, 0.363385886, 0]
+      Rotation: [0, -0, 0]
+      Scale: [0.0799999982, 0.0599999987, 0.0799999982]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: FireBallMesh.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\020.dds
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\020.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Fireball_001_TEX_KJS.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\explo016.tga
+      TextureNormalPath: ""
+      ScrollSpeedX: [-0.5, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 5.30000019
+      DistortionBias: 0.200000003
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+    Children:
+      - 6412751192447492084
+  - Name: Empty Object
+    UUID: 6412751192447492084
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 1
+    BillBord: true
+    Com_Transform:
+      Translation: [-0.0845483169, 0.263149202, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1.5, 1.5, 1.5]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\020.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_BoomMask_02.tga
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AESmoke_001_PS_JYW.tga
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
   - Name: E_MeteoExplo
-    UUID: 8785287643544324078
+    UUID: 9964478890369991515
     Active: true
     Layer: Default
     Instancing: false
@@ -49,13 +128,13 @@ GameObjects:
     PassIndex: 2
     BillBord: false
     Com_Transform:
-      Translation: [-0.841885507, 0, 0]
+      Translation: [-0.52340579, 0, 0]
       Rotation: [0, -0, 0]
       Scale: [1, 1, 1]
     Com_VIBuffer:
       {}
     Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Smoke4.dds
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FX_fireball.dds
       TextureMaskPath: ""
       TextureNoisePath: ""
       TextureNormalPath: ""
@@ -73,14 +152,14 @@ GameObjects:
       FadeInDuration: 0
       FadeInStratTime: 0
       EffectDuration: 0
-      SpriteNumX: 5
-      SpriteNumY: 5
-      SpriteTotal: 25
+      SpriteNumX: 4
+      SpriteNumY: 8
+      SpriteTotal: 32
       SpriteSpeed: 30
     Children:
-      - 7381740714801723460
+      - 17560369029756367008
   - Name: E_MeteoTexture
-    UUID: 7381740714801723460
+    UUID: 17560369029756367008
     Active: true
     Layer: Default
     Instancing: false
@@ -116,22 +195,22 @@ GameObjects:
       SpriteNumY: 5
       SpriteTotal: 25
       SpriteSpeed: 30
-  - Name: E_EAFireBall
-    UUID: 5939711621973384903
+  - Name: E_Meteo
+    UUID: 4477987580313695556
     Active: true
     Layer: Default
     Instancing: false
     Type: Effect
     PassIndex: 2
-    BillBord: true
+    BillBord: false
     Com_Transform:
-      Translation: [0, 0, -0.0229713507]
-      Rotation: [-0.755309105, -0.795636833, -2.25971732e-07]
-      Scale: [0.999627769, 1.00059736, 0.999827325]
+      Translation: [0, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1.5, 1.5, 1]
     Com_VIBuffer:
       {}
     Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FireBall03_8x8.dds
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FireBall04_8x8.dds
       TextureMaskPath: ""
       TextureNoisePath: ""
       TextureNormalPath: ""
@@ -142,33 +221,33 @@ GameObjects:
       Distortion3: [0.100000001, 0.100000001]
       DistortionScale: 0.800000012
       DistortionBias: 0.5
-      FadeOut: true
-      FadeOutDuration: 3
+      FadeOut: false
+      FadeOutDuration: 0
       FadeOutStratTime: 0
       FadeIn: false
       FadeInDuration: 0
       FadeInStratTime: 0
-      EffectDuration: 3
+      EffectDuration: 0
       SpriteNumX: 8
       SpriteNumY: 8
       SpriteTotal: 64
       SpriteSpeed: 30
-  - Name: E_EAFireExplo
-    UUID: 3711329144164515411
+  - Name: Empty Object
+    UUID: 15208104133241892971
     Active: true
     Layer: Default
     Instancing: false
     Type: Effect
     PassIndex: 2
-    BillBord: true
+    BillBord: false
     Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [-0.755309165, -0.795636892, -2.25971732e-07]
-      Scale: [1.00033402, 0.998709083, 1.00197744]
+      Translation: [0.86062175, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
     Com_VIBuffer:
       {}
     Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Smoke4.dds
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\WispySmoke02_8x8.dds
       TextureMaskPath: ""
       TextureNoisePath: ""
       TextureNormalPath: ""
@@ -186,81 +265,7 @@ GameObjects:
       FadeInDuration: 0
       FadeInStratTime: 0
       EffectDuration: 0
-      SpriteNumX: 5
-      SpriteNumY: 5
-      SpriteTotal: 25
+      SpriteNumX: 8
+      SpriteNumY: 8
+      SpriteTotal: 64
       SpriteSpeed: 30
-  - Name: E_EAFire
-    UUID: 13002950037316236514
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 2
-    BillBord: true
-    Com_Transform:
-      Translation: [0.0787363127, 0.992836535, 0.15544042]
-      Rotation: [-0.755309165, -0.795636952, -2.2597176e-07]
-      Scale: [0.999140799, 1.00194907, 0.999456108]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Explosion01-light_5x5.tga
-      TextureMaskPath: ""
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: true
-      FadeOutDuration: 3
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 3
-      SpriteNumX: 5
-      SpriteNumY: 5
-      SpriteTotal: 25
-      SpriteSpeed: 25
-  - Name: E_EAFireBall
-    UUID: 16276616038522574343
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 2
-    BillBord: true
-    Com_Transform:
-      Translation: [2.22962761, 1.25387263, -0.582078636]
-      Rotation: [-0.755309165, -0.795636833, -2.25971732e-07]
-      Scale: [0.999597251, 0.998794973, 1.00187087]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Smoke2.dds
-      TextureMaskPath: ""
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 5
-      SpriteNumY: 5
-      SpriteTotal: 25
-      SpriteSpeed: 25
